--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@ Curabitur tempus mauris ex, ut bibendum leo laoreet eu. Phasellus eu suscipit ma
 </div>
 <div class="navbar">
 </div>
+
+<div class="scroll">
+   <button class="btn btn-success">
+      Do góry
+   </button>
+</div>
+
 <footer class="mojaKlasa">Copyrights © Kacper Dąbrowa | 2021</footer>
 <script src="navbar.js"></script>
+<script src="top.js"></script>
 </body>
 </html>
